<resources>
    <string name="app_name">mitamin</string>
    <string name="mode">Day</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_title">매일 챙겨 먹는 마음 비타민</string>
    <string name="first_login">이메일로 로그인</string>
    <string name="first_join">이메일로 가입하기</string>
    <string name="first_or">또는</string>
    <string name="login_title">이메일로 로그인</string>
    <string name="login_email">이메일</string>
    <string name="login_password">비밀번호</string>
    <string name="login_auto">자동 로그인</string>
    <string name="login_login">로그인</string>
    <string name="login_find">비밀번호를 잊어버리셨나요?</string>
    <string name="find_title">비밀번호 찾기</string>
    <string name="find_1_title">가입할 때 사용한\n이메일을 입력해주세요.</string>
    <string name="find_1_email">이메일</string>
    <string name="find_1_email_hint">내용입력</string>
    <string name="find_1_email_btn">인증요청</string>
    <string name="find_1_code">인증코드</string>
    <string name="find_1_code_btn">인증확인</string>
    <string name="find_3_title">&#160;&#160;&#160;&#160;&#160;&#160;&#160;비밀번호 변경이\n 성공적으로 완료되었어요!</string>
    <string name="find_3_subtitle">다시 마이타민을 시작하러 갈까요?</string>
    <string name="find_2_title">새롭게 사용하실\n비밀번호를 입력해주세요.</string>
    <string name="find_2_password">비밀번호</string>
    <string name="find_2_password_hint">영문,숫자를 포함한 8~30자리 조합으로 설정</string>
    <string name="find_2_password2">새롭게 사용하실\n비밀번호를 입력해주세요.</string>
    <string name="find_2_password_hint2">비밀번호 확인을 위한 재입력을 해주세요.</string>
    <string name="join_step_one_title">나를 위한 마음 비타민,\n오늘부터 섭취해 보시겠어요?</string>
    <string name="join_step_email_title">이메일</string>
    <string name="join_step_email_hint">이메일을 입력해주세요.</string>
    <string name="join_step_password_title">비밀번호</string>
    <string name="join_step_password_hint">영문,숫자를 포함한 8~30자리 조합으로 설정해주세요</string>
    <string name="join_step_password_title2">비밀번호 확인</string>
    <string name="join_step_password_hint2">비밀번호 확인을 위해 다시 비밀번호를 입력해주세요</string>
    <string name="join_step_two_title">마이타민 서비스 이용약관에\n동의해 주세요.</string>
    <string name="join_step_two_sub1">전체 동의하기</string>
    <string name="join_step_two_sub2">(필수)이용약관에 동의합니다.</string>
    <string name="join_step_two_sub3">(필수)개인정보 처리방침에 동의합니다.</string>
    <string name="join_step_three_title">마이타민에서 사용할\n닉네임을 입력해주세요.</string>
    <string name="join_step_three_subtitle">닉네임</string>
    <string name="join_step_detail">보기</string>
    <string name="introduce_first_talk_one">안녕하세요,</string>
    <string name="introduce_first_talk_two">님!\n매일 챙겨먹는 마음 비타민\n 마이타민입니다!</string>
    <string name="introduce_second_talk">하루의 끝에서\n오늘의 나를 진단해보고\n칭찬 처방을 내려보세요.</string>
    <string name="introduce_third_talk">적어도 한달에 한번은\n오로지 자신의 행복을 위한\n하루가 되도록 도울게요.</string>
    <string name="introduce_four_title">하루를 마무리하는 시간은\n언제쯤 인가요?</string>
    <string name="introduce_four_subtitle">마이타민 섭취 알림을 보내드릴게요!</string>
    <string name="introduce_four_not">나중에 할게요</string>
    <string name="next_talk">다음</string>
    <string name="home_start">시작하기</string>
    <string name="home_today_mytamin">최근의 마이타민</string>
    <string name="home_retouch">수정하기</string>
    <string name="home_no">&#160;&#160;&#160;&#160;&#160;아직 섭취한\n마이타민이 없어요</string>
    <string name="home_no_layout">오늘은 아직 섭취한 마이타민이 없어요</string>
    <string name="home_yesmytamin_talk">하루진단</string>
    <string name="home_yesmytamin_talktwo">칭찬 처방</string>
    <string name="home_yesmytamin_talk_tmp_one">오늘 아침에 미리 날씨를 보고 우산을 챙겨서\n이전처럼 편의점에서 불필요하게 우산을 살\n필요가 없었어.\n학교에서는 좀 많이 졸렸어. 다음부터는 일찍 자는\n게 좋을 것 같아.</string>
    <string name="home_yesmytamin_talk_tmp_two">오늘 계획했던 일을 전부 했어.</string>
    <string name="home_yesmytamin_talk_tmp_three">성실하려 노력하는 내 모습이 좋아.</string>
    <string name="mytamin_step_title">오늘의 마이타민</string>
    <string name="mytamin_step_one_title">1.&#160;숨고르기</string>
    <string name="mytamin_step_one_state"> 코로 천천히 숨을 들이마셨다가 \n배에 가득 담긴 공기를 잠시 느끼고\n    천천히 내뱉어 보세요.</string>
    <string name="mytamin_step_one_pass">패스하기</string>
    <string name="mytamin_step_one_next">다음으로</string>
    <string name="mytamin_step_one_correction">수정하기</string>
    <string name="mytamin_step_one_auto">자동진행</string>
    <string name="mytamin_step_three_state">오늘의 마음 컨디션은 어떤가요?</string>
    <string name="mytamin_step_four_title">3.&#160;하루진단하기</string>
    <string name="mytamin_step_four_state">감정을 진찰해볼까요?</string>
    <string name="mytamin_step_four_chip_one">신나는</string>
    <string name="mytamin_step_four_chip_two">즐거운</string>
    <string name="mytamin_step_four_chip_three">활기찬</string>
    <string name="mytamin_step_four_chip_four">행복한</string>
    <string name="mytamin_step_four_chip_five">감사한</string>
    <string name="mytamin_step_four_chip_six">감동적인</string>
    <string name="mytamin_step_four_chip_seven">기대되는</string>
    <string name="mytamin_step_four_chip_eight">편안한</string>
    <string name="mytamin_step_four_chip_nine">평화로운</string>
    <string name="mytamin_step_four_chip_ten">홀가분한</string>
    <string name="mytamin_step_four_chip_eleven">만족스러운</string>
    <string name="mytamin_step_four_chip_twelve">설레는</string>
    <string name="mytamin_step_four_chip_thirty">샹쾌한</string>
    <string name="mytamin_step_five_subtitle">오늘&#160;하루를&#160;진단해주세요</string>
    <string name="mytamin_step_five_hint">오늘&#160;아침의&#160;나에게&#160;하루를&#160;진단해준다면?</string>
    <string name="mytamin_step_six_title">4.&#160;칭찬&#160;처방하기</string>
    <string name="mytamin_step_six_subtitle">어떤&#160;부분을&#160;칭찬해볼까요?</string>
    <string name="mytamin_step_six_hint">스스로를&#160;칭찬해주세요!</string>
    <string name="mytamin_step_six_subtitle_two">칭찬의&#160;문장으로&#160;마무리해주세요.</string>
    <string name="mytamin_step_six_hint_two">대단해,발전하고&#160;있어,역시&#160;나야&#160;등</string>
    <string name="mytamin_step_six_sheet0">카테고리를 골라주세요</string>
    <string name="mytamin_step_six_sheet1">이루어&#160;낸&#160;일</string>
    <string name="mytamin_step_six_sheet2">잘한&#160;일이나&#160;행동</string>
    <string name="mytamin_step_six_sheet3">노력하고&#160;있는&#160;부분</string>
    <string name="mytamin_step_six_sheet4">긍정적인&#160;변화나&#160;깨달음</string>
    <string name="mytamin_step_six_sheet5">감정, 생각&#160;혹은&#160;신체&#160;일부분</string>
    <string name="mytamin_step_six_sheet6">과거의&#160;나</string>
    <string name="mytamin_step_six_sheet7">기타</string>
    <string name="mytamin_dialog_text1">새로운 사건이 있으셨나 보네요</string>
    <string name="mytamin_dialog_text2">를 수정하시겠어요?</string>
    <string name="mytamin_dialog_btn_positive">수정하기</string>
    <string name="mytamin_dialog_btn_negative">취소하기</string>
    <string name="mytamin_dialog_btn_positive2">나가기</string>
    <string name="init_title">기록초기화</string>
    <string name="init_maintitle">초기화를 진행할 경우</string>
    <string name="init_subtitle">다시는 복구할 수 없습니다.</string>
    <string name="init_sbusbstitle">신중하게 선택한 뒤 아래의 초기화 버튼을 눌러주세요.</string>
    <string name="init_downtitle">초기화하고자 하는 기록을 선택해주세요.</string>
    <string name="init_report">마음진단</string>
    <string name="init_reportsub">마음 컨디션,감정단어,진단 내용,이를 포함한 모든 통계가\n초기화 됩니다.</string>
    <string name="init_care">칭찬 처방</string>
    <string name="init_caresub">칭찬 카테고리,칭찬 기록이 초기화됩니다.</string>
    <string name="init_myday">마이데이</string>
    <string name="init_mydaysub">위시리스트, 데이노트 내용이 초기화됩니다.</string>
    <string name="init_init">초기화</string>
    <string name="user_title">마이페이지</string>
    <string name="user_beMyMessage">날먹하고싶은</string>
    <string name="user_myday_day">00월 00일</string>
    <string name="user_myday_subtitle1">이번달 마이데이는</string>
    <string name="user_mydaytitle">마이데이</string>
    <string name="user_myday_state">이번 마이데이에는 무엇을 해볼까요?</string>
    <string name="user_myday_btn">마이데이 바로가기</string>
    <string name="user_edit_title">프로필 편집</string>
    <string name="user_myday_nickname">닉네임</string>
    <string name="user_myday_tobe">되고 싶은 내모습</string>
    <string name="user_myday_tobe_sub">내가 될</string>
    <string name="user_myday_complete">나를 위한 새로운 행동 추가하기</string>
    <string name="user_myday_bottom1">기본 이미지 선택</string>
    <string name="user_myday_bottom2">앨범에서 사진 선택</string>
    <string name="user_information_title">앱정보</string>
    <string name="user_information_manage">계정관리</string>
    <string name="user_information_guide1">서비스 이용약관</string>
    <string name="user_information_guide2">개인정보 처리방침</string>
    <string name="user_information_guide3">버전 1.1.1</string>
    <string name="user_information_guide4">최신버전 입니다.</string>
    <string name="user_information_guide5">계정 정보</string>
    <string name="user_information_guide6">비밀번호 변경</string>
    <string name="user_information_guide7">기록 초기화</string>
    <string name="user_information_guide8">로그아웃</string>
    <string name="user_information_guide9"><u>회원탈퇴</u></string>
    <string name="user_information_guide10">회원탈퇴를 하시겠어요?</string>
    <string name="user_information_guide11">취소</string>
    <string name="user_information_guide12">확인</string>
    <string name="complete">완료</string>
    <string name="myday_title">마이데이</string>
    <string name="myday_edit">편집</string>
    <string name="myday_wishlist">위시리스트</string>
    <string name="wishlist_state">자신을 위해서 해보고\n싶은 행동이 있나요?</string>
    <string name="wishlist_no_title">&#160;&#160;&#160;&#160;&#160;아직 작성된\n위시리스트가 없어요.</string>
    <string name="wishlist_no_subtitle">위시리스트를 채워주세요!</string>
    <string name="wishlist_no_btn">작성하기</string>
    <string name="daynote_state">이번 마이데이에는\n어떤 추억을 쌓게 될까요?</string>
    <string name="daynote_no_title">아직 작성된</string>
    <string name="daynote_no_title2">데이노트가 없어요.</string>
    <string name="daynote_no_subtitle">마이데이를 기록해주세요!</string>
    <string name="wishlist_hidden_title">숨겨진 리스트</string>
    <string name="wishlist_hint">내용 입력</string>
    <string name="wishlist_modify">내용 수정하기</string>
    <string name="wishlist_delete">삭제하기</string>
    <string name="snackbar_delete">리스트가 삭제되었어요</string>
    <string name="snackbar_btn">실행취소</string>
    <string name="daynote_footer1">데이노트</string>
    <string name="daynote_footer2">추가</string>
    <string name="record_title">기록남기기</string>
    <string name="record_category">완료한 위시리스트</string>
    <string name="record_comment_hint">코멘트를 남겨주세요</string>
    <string name="record_complete_title">완료한 위시리스트</string>
    <string name="record_complete_btn">선택</string>
    <string name="management_title">계정관리</string>
    <string name="management_email">이메일</string>
    <string name="management_logout">로그아웃</string>
    <string name="management_exit">회원탈퇴</string>
    <string name="management_init">기록 초기화</string>
    <string name="setting_title">설정</string>
    <string name="setting_subtitle">부가기능</string>
    <string name="setting_eat_alarm">섭취 알림</string>
    <string name="setting_eat_alarm_sub">지정한 시간에 마이타민 섭취 알림을 받을게요.</string>
    <string name="setting_eat_alarm_btn">오후 09:00</string>
    <string name="setting_password">앱 잠금</string>
    <string name="setting_password_sub">앱을 시작할 때 잠금해제가 필요해요.</string>
    <string name="setting_myday">마이데이 알림</string>
    <string name="setting_myday_sub">마이데이가 다가오면 알림을 받을게요.</string>
    <string name="setting_myday_btn">하루 전</string>
    <string name="setting_myday_1">당일</string>
    <string name="setting_myday_2">하루 전</string>
    <string name="setting_myday_3">일주일 전</string>
    <string name="detail_title">마이데이 기록</string>
    <string name="detail_modify">마이데이 기록 수정하기</string>
    <string name="detail_delete">마이데이 기록 삭제하기</string>
    <string name="history_praise_title">칭찬 처방 기록</string>
    <string name="history_praise_btn">전체 처방 기록 보기</string>
    <string name="history_care_title">감정 진단 기록</string>
    <string name="history_care_subtitle">주간 마음 컨디션</string>
    <string name="history_history_title">이번 달 가장 많이 느낀 감정</string>
    <string name="history_calendar_title">마이타민 모아보기</string>
    <string name="history_praise_x">아직 칭찬한 기록이 없어요</string>
    <string name="weekly_title">진단기록</string>
    <string name="weekly_no">해당 날짜에 섭취한 마이타민이 없어요</string>
    <string name="care_history_title">칭찬 처방 기록</string>
</resources>