<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserInitActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/init_line1"
        android:layout_height="44dp">


    <ImageButton
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/icon_arraow_left_small_black"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/init_back"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/init_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="2dp"

        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@+id/init_line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_icon_exclamation_circle_mono_red"
        android:id="@+id/init_image"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/init_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/init_maintitle"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/appmainfont_bold"
        android:includeFontPadding="false"
        android:layout_marginTop="16dp"
        android:id="@+id/init_subtitle1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/init_subtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/init_subtitle"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/appmainfont_bold"
        android:id="@+id/init_subtitle2"
        android:includeFontPadding="false"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/init_subtitle2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/init_sbusbstitle"
        android:textColor="@color/darkGray"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/appsubfont_r"
        android:includeFontPadding="false"
        android:id="@+id/init_subtitle3"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        app:layout_constraintTop_toBottomOf="@+id/init_subtitle3"
        android:background="@color/line_gray"
        android:layout_marginTop="40dp"
        android:id="@+id/init_line2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/init_line2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/init_downtitle"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/appsubfont_r"
        android:includeFontPadding="false"
        android:id="@+id/init_downtext"
        />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@+id/init_downtext"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/init_report_box"
        android:button="@drawable/join_checkbox"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/init_downtext"
        app:layout_constraintStart_toEndOf="@+id/init_care_box"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="12dp"
        android:textSize="16sp"
        android:text="@string/init_report"
        android:fontFamily="@font/appmainfont_medium"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:id="@+id/init_report_title"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/init_report_title"
        app:layout_constraintStart_toEndOf="@+id/init_care_box"
        android:text="@string/init_reportsub"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/appsubfont_r"
        android:textColor="@color/darkGray"
        android:textSize="12dp"
        android:id="@+id/init_report_subtitle"
        />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@+id/init_report_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/init_care_box"
        android:button="@drawable/join_checkbox"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/init_report_subtitle"
        app:layout_constraintStart_toEndOf="@+id/init_care_box"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="12dp"
        android:textSize="16sp"
        android:text="@string/init_care"
        android:fontFamily="@font/appmainfont_medium"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:id="@+id/init_care_title"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/init_care_title"
        app:layout_constraintStart_toEndOf="@+id/init_care_box"
        android:text="@string/init_caresub"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/appsubfont_r"
        android:textColor="@color/darkGray"
        android:textSize="12dp"
        android:id="@+id/init_care_subtitle"
        />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@+id/init_care_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/init_myday_box"
        android:button="@drawable/join_checkbox"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/init_care_subtitle"
        app:layout_constraintStart_toEndOf="@+id/init_care_box"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="12dp"
        android:textSize="16sp"
        android:text="@string/init_myday"
        android:fontFamily="@font/appmainfont_medium"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:id="@+id/init_myday_title"


        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/init_myday_title"
        app:layout_constraintStart_toEndOf="@+id/init_care_box"
        android:text="@string/init_mydaysub"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/appsubfont_r"
        android:textColor="@color/darkGray"
        android:textSize="12dp"
        android:id="@+id/init_myday_subtitle"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/init_init"
        android:enabled="false"
        android:id="@+id/init_btn"
        android:textColor="@color/background_white"
        android:fontFamily="@font/appmainfont_bold"
        android:includeFontPadding="false"
        android:textSize="16dp"
        android:background="@drawable/round_layout_selector_orange"
        />

</androidx.constraintlayout.widget.ConstraintLayout>