<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewWishListActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/icon_arraow_left_small_black"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:id="@+id/new_wish_back_btn"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/myday_title"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/myday_edit"
        android:layout_marginRight="20dp"
        />
    <EditText
        android:id="@+id/new_wish_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/wishlist_hint"
        android:textSize="16sp"
        android:fontFamily="@font/appsubfont_r"
        android:gravity="center|left"
        android:padding="10dp"
        android:background="@drawable/edit_box"
        app:layout_constraintTop_toBottomOf="@+id/new_wish_back_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"

        android:background="@drawable/round_layout_background_orange"
        android:text="@string/wishlist_no_btn"
        android:textColor="@color/background_white"
        android:fontFamily="@font/appmainfont_medium"
        android:includeFontPadding="false"
        android:textSize="16sp"
        android:id="@+id/new_wish_complete_btn"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>