<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.todaymytamin.MytaminStepSixFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mytamin_step_six_title"
        android:fontFamily="@font/appsubfont_eb"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="20dp"
        android:includeFontPadding="false"
        android:id="@+id/mytamin_step_six_title"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/mytamin_step_six_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mytamin_step_six_subtitle"
        android:includeFontPadding="false"
        android:fontFamily="@font/appsubfont_m"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/mytamin_step_six_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/darkGray"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mytamin_step_six_subtitle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/edit_box"
        android:id="@+id/mytamin_step_six_layout"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mytamin_step_six_sheet0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/mytamin_step_six_category"
            android:textColor="@color/subGray"
            android:fontFamily="@font/appsubfont_r"
            />
        <ImageButton
            android:id="@+id/mytamin_step_six_btn"
            android:layout_marginRight="20dp"
            android:layout_width="7.1dp"
            android:layout_height="12.17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/ic_icon_arrow_down_small_mono"
            android:padding="15dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <EditText
        android:id="@+id/mytamin_step_six_care_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/mytamin_step_six_hint"
        app:layout_constraintTop_toBottomOf="@+id/mytamin_step_six_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_box"
        android:textSize="14sp"
        android:fontFamily="@font/appsubfont_r"
        android:lines="3"
        android:gravity="top"
        android:padding="10dp"

        />
    <TextView
        android:id="@+id/mytamin_step_six_subtitle_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mytamin_step_six_subtitle_two"
        android:includeFontPadding="false"
        android:fontFamily="@font/appsubfont_m"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/mytamin_step_six_care_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/darkGray"
        />
    <EditText
        android:id="@+id/mytamin_step_six_care_sub"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/mytamin_step_six_hint_two"
        app:layout_constraintTop_toBottomOf="@+id/mytamin_step_six_subtitle_two"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_box"
        android:textSize="14sp"
        android:fontFamily="@font/appsubfont_r"
        android:gravity="top"
        android:padding="10dp"

        />



</androidx.constraintlayout.widget.ConstraintLayout>